--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
         var beforeheight = canvas.style.height;
         canvas.style.width = window.innerWidth + 'px';
         canvas.style.height = window.innerHeight + 'px';
-          unityShowBanner('bw: ${beforeWidth}, bh: ${beforeheight}, aw: ${canvas.style.width}, ah: ${canvas.style.height}');
+          unityShowBanner(
+              "<ul>"
+              + `<li>Before width:${beforeWidth}px, height:${beforeheight}px</li>`
+              + `<li>After  width:${canvas.style.width}px, height:${canvas.style.height}px</li>`
+              + "</ul>";
+          );
       }
 
       var buildUrl = "Build";
