--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
         var beforeheight = canvas.style.height;
         canvas.style.width = window.innerWidth + 'px';
         canvas.style.height = window.innerHeight + 'px';
-          unityShowBanner(
-              "<ul>"
-              + `<li>Before width:${beforeWidth}px, height:${beforeheight}px</li>`
-              + `<li>After  width:${canvas.style.width}px, height:${canvas.style.height}px</li>`
-              + "</ul>"
-          );
+        var div = document.createElement('div');
+        div.innerHTML = "<ul>"
+            + `<li>Before width:${beforeWidth}px, height:${beforeheight}px</li>`
+            + `<li>After  width:${canvas.style.width}px, height:${canvas.style.height}px</li>`
+            + "</ul>";
       }
 
       var buildUrl = "Build";
