--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
         var beforeheight = canvas.style.height;
         canvas.style.width = window.innerWidth + 'px';
         canvas.style.height = window.innerHeight + 'px';
-        var div = document.createElement('div');
-        div.innerHTML = "<ul>"
-            + `<li>Before width:${beforeWidth}px, height:${beforeheight}px</li>`
-            + `<li>After  width:${canvas.style.width}px, height:${canvas.style.height}px</li>`
-            + "</ul>";
+          unityShowBanner(
+              "<ul>"
+              + `<li>Before width:${beforeWidth}, height:${beforeheight}</li>`
+              + `<li>After  width:${canvas.style.width}, height:${canvas.style.height}</li>`
+              + "</ul>"
+          );
       }
 
       var buildUrl = "Build";
@@ -92,6 +93,7 @@
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
+        screen.orientation.lock("landscape");
 
         canvas.style.width = window.innerWidth + 'px';
         canvas.style.height = window.innerHeight + 'px';
@@ -116,9 +118,9 @@
           alert(message);
         });
       };
-        window.addEventListener("orientationchange", () => {
-          setCanvasOrientation();
-        });
+        //window.addEventListener("orientationchange", () => {
+        //  setCanvasOrientation();
+        //});
       document.body.appendChild(script);
     </script>
   </body>
