--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
-        screen.orientation.lock("landscape");
 
         canvas.style.width = window.innerWidth + 'px';
         canvas.style.height = window.innerHeight + 'px';
@@ -118,6 +117,11 @@
           alert(message);
         });
       };
+        screen.orientation.addEventListener("change", () => {
+            setTimeout(() => {
+                setCanvasOrientation();
+            }, 100);
+        });
         //window.addEventListener("orientationchange", () => {
         //  setCanvasOrientation();
         //});
