--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
       <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">webgl-test</div>
+      </div>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -48,25 +55,12 @@
         updateBannerVisibility();
       }
 
-      function setCanvasOrientation() {
-        var beforeWidth = canvas.style.width;
-        var beforeheight = canvas.style.height;
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
-          unityShowBanner(
-              "<ul>"
-              + `<li>Before width:${beforeWidth}, height:${beforeheight}</li>`
-              + `<li>After  width:${canvas.style.width}, height:${canvas.style.height}</li>`
-              + "</ul>"
-          );
-      }
-
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/webgl-testbuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl-testbuild.data",
-        frameworkUrl: buildUrl + "/webgl-testbuild.framework.js",
-        codeUrl: buildUrl + "/webgl-testbuild.wasm",
+        dataUrl: buildUrl + "/webgl-testbuild.data.unityweb",
+        frameworkUrl: buildUrl + "/webgl-testbuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/webgl-testbuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "webgl-test",
@@ -96,7 +90,8 @@
 
         canvas.style.width = window.innerWidth + 'px';
         canvas.style.height = window.innerHeight + 'px';
-        // デバッグビルド用、横向き案内を行う
+
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
@@ -113,18 +108,13 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
         }).catch((message) => {
           alert(message);
         });
       };
-        screen.orientation.addEventListener("change", () => {
-            setTimeout(() => {
-                setCanvasOrientation();
-            }, 100);
-        });
-        //window.addEventListener("orientationchange", () => {
-        //  setCanvasOrientation();
-        //});
       document.body.appendChild(script);
     </script>
   </body>
